added stars, changed bg; made more star wars like

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.typekit.net/hjk6uuj.css">
     <meta name="viewport" content="width=device-width, initial-scale=0.9">
+    <script src="stars.js"></script>
     <title>English2Yoda</title>
 
 </head>
@@ -21,7 +22,6 @@
         <form>
             <input class="input-box" type="text" name="input"><br>
         </form>
-        <!-- <p id="text-output"></p> -->
     </div>
 
     <div id="yoda">
