--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/hjk6uuj.css">
     <meta name="viewport" content="width=device-width, initial-scale=0.9">
     <script src="stars.js"></script>
+    <script src="node_modules\web-animations-js\web-animations.min.js"></script>
     <title>English2Yoda</title>
 
 </head>
