--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.typekit.net/hjk6uuj.css">
-    <meta name="viewport" content="width=device-width, initial-scale=0.9">
+    <meta name="viewport" content="width=device-width, initial-scale=0.9, user-scalable=no">
     <script src="stars.js"></script>
-    <script src="node_modules\web-animations-js\web-animations.min.js"></script>
+    <script src="bundle.js"></script>
+    <script src="p5.min.js"></script>
     <title>English2Yoda</title>
 
 </head>
@@ -18,11 +19,14 @@
 <body>
 
     <div class="input-field">
+
         <h1>English2Yoda</h1>
         <h2>Please enter your text below</h2>
-        <form>
+
+        <form id="input-text" onsubmit="sendRequest(); return false">
             <input class="input-box" type="text" name="input"><br>
         </form>
+
     </div>
 
     <div id="yoda">
@@ -50,6 +54,8 @@
             <div id="chin"></div>
         </div>
     </div>
+    
+    <div id="sketch-div"></div>
 </body>
 
 </html>
