--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
     <script src="p5.min.js"></script>
     <title>English2Yoda</title>
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-142986613-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-142986613-1');
+</script>
+
+
 </head>
 
 <body>
