added theme colour meta tag

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.typekit.net/hjk6uuj.css">
     <meta name="viewport" content="width=device-width, initial-scale=0.9, user-scalable=no">
+    <meta name="theme-color" content="#000000"/>
     <script src="stars.js"></script>
     <script src="index.js"></script>
     <script src="p5.min.js"></script>
